# finanzer

./: .gitignore  Dockerfile  config.yaml  pyproject.toml
.github/workflows/: release.yml
appdata/: __init__.py  app_dir_provider.py  repos.py
finance/: main.py
finance/gui/: color_map.py
finance/gui/widgets/: account_activity.py  bar_chart.py  diagram.py  entry_prop_table_item.py  expenses.py  factory.py  group_table_item.py  helpers.py  incomes.py  monthly_overview.py  my_widget.py  pie_chart.py  table.py  toolbar.py  transfers.py
finance/gui/widgets/tables/: accounts.py  factory.py  table.py  transfers.py
finance/model/: entry.py
finance/repository/: budget_repo.py
finance/utils/: __init__.py  monthly_overview.py
finance/webapp/: accounts_table.py  balance_summary.py  expense_income_graph.py  expense_table.py  helpers.py  income_table.py  modal_input.py  models.py  movements.py  movements_graph.py  saldo_graph.py  state.py  transfer_table.py  transform.py  webapp.py
finance/webapp/assets/: style.css
