[tool.poetry]
name = "finance"
version = "0.1.0"
description = ""
authors = ["jsjes <jsjes@vestas.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
PySide6 = "^6.3.0"
qt-material = "^2.10"
numpy = "^1.22.3"
appdirs = "^1.4.4"
orjson = "^3.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
